2014-03-23  Holger Seelig  <holger.seelig@yahoo.de>

	* Proto.h:
	* OpenGL.h:
	* Proto.cpp:
	* Sound.h:
	* Sound.cpp:
	* LayoutGroup.h:
	* X3DShapeNode.h:
	* X3DExecutionContext.h:
	* Collision.h:
	* X3DShapeNode.cpp:
	* LayoutGroup.cpp:
	* LoadSensor.h:
	* X3DLayerNode.h:
	* Collision.cpp:
	* X3DLayerNode.cpp:
	* LoadSensor.cpp:
	* X3DGroupingNode.h:
	* X3DGeometryNode.h:
	* X3DGroupingNode.cpp:
	* X3DGeometryNode.cpp:
	* ProximitySensor.h:
	* ProximitySensor.cpp:
	* X3DBackgroundNode.h:
	* X3DBackgroundNode.cpp: 

2014-03-23  Holger Seelig  <holger.seelig@yahoo.de>

	* X3DScene.cpp:
	* ImportedNode.cpp:
	* ExportedNode.cpp: 

2014-03-23  Holger Seelig  <holger.seelig@yahoo.de>

	* X3DScene.cpp: 

2014-03-23  Holger Seelig  <holger.seelig@yahoo.de>

	* X3DScene.cpp:
	* ImportedNode.cpp:
	* ExportedNode.cpp: 

2014-03-23  Holger Seelig  <holger.seelig@yahoo.de>

	* X3DScene.cpp: 

2014-03-23  Holger Seelig  <holger.seelig@yahoo.de>

	* VolumeEmitter.cpp:
	* PolylineEmitter.cpp: 

2014-03-22  Holger Seelig  <holger.seelig@yahoo.de>

	* X3DBaseNode.cpp:
	* X3DBrowser.cpp: 

2014-03-22  Holger Seelig  <holger.seelig@yahoo.de>

	* X3DBaseNode.h:
	* X3DBaseNode.cpp:
	* Script.h:
	* ShaderPart.h:
	* Script.cpp:
	* ShaderPart.cpp:
	* ShaderProgram.h:
	* ShaderProgram.cpp:
	* X3DPrototypeInstance.cpp: 

2014-03-22  Holger Seelig  <holger.seelig@yahoo.de>

	* X3DField.h:
	* Proto.cpp:
	* X3DBaseNode.h:
	* X3DBaseNode.cpp:
	* Generator.h:
	* Generator.cpp:
	* X3DFieldDefinition.h:
	* Script.h:
	* Script.cpp:
	* X3DPrototypeInstance.cpp: 

2014-03-22  Holger Seelig  <holger.seelig@yahoo.de>

	* X3DBaseNode.cpp:
	* X3DExecutionContext.cpp:
	* X3DPrototypeInstance.cpp: 

2014-03-22  Holger Seelig  <holger.seelig@yahoo.de>

	* Makefile.am:
	* libtitania-x3d.cproj:
	* Nodes.h:
	* Parser.h:
	* Nodes.cpp:
	* Parser.cpp:
	* X3DMFNode.h:
	* X3DConstants.h:
	* Proto.cpp:
	* X3DScene.h:
	* X3DBaseNode.cpp:
	* X3DScene.cpp:
	* ProtoArray.h:
	* Generator.h:
	* ExternProto.cpp: